--- a/saas.html
+++ b/saas.html
@@ -229,7 +229,11 @@
                          </div>
                     </div>
                 </div>
-                
+                <!--////////////////////////////////////  -->
+                <div class="twelfth-section">
+                    <h2>Pricing</h2>
+                    <p>No additional costs. Pay for what you use.</p>
+                </div> 
                 <!-- page container -->
             </div>
 
