Add section thirteen

--- a/saas.html
+++ b/saas.html
@@ -154,8 +154,18 @@
                     </div>
                 </div> 
                     <!--////////////////////////////////////  -->
-                
-                    <hr>
+
+                <div class="hr-container">
+                    <div class="hr"></div>
+                    <div class="hr-blue"></div>
+                    <div class="hr-blue"></div>
+                    <div class="hr-blue"></div>
+                    <div class="hr-blue"></div>
+                    <div class="hr-blue"></div>
+                    <div class="hr-blue"></div>
+                    <div class="hr"></div>
+                </div>    
+
                 <div class="seventh-section">
 
                         <div class="seventh-section-container">
@@ -234,6 +244,72 @@
                     <h2>Pricing</h2>
                     <p>No additional costs. Pay for what you use.</p>
                 </div> 
+                <!--////////////////////////////////////  -->
+                <div class="tirteenth-section">
+                    <div class="thirteenth-left">
+                        <div class="tirteenth-left-card">
+                            <div class="tirteenth-left-card-top">
+                                <h1>59</h1><span><p>/mo</p></span>
+                            </div>
+                            <div class="tirteenth-left-card-bottom">
+                                <p>Start your Front business now. 100% guaranteed money back. No questions asked.</p>
+                                <button class="playButton">
+                                    <i class="fa-solid fa-circle-play"></i>
+                                    Play Video
+                                </button>
+                                <p>No credit card required.</p>    
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="thirteenth-right">
+                        <div class="thirteenth-section-grid"> 
+
+                            <div class="grid-container">
+                                <div class="thirteenth-right-img-container">
+                                    <img src="saas-project-assets\icons\components.svg" alt="components">
+                                </div>
+                                <div class="grid-container-header">
+                                    <h2>Hundreds of components</h2>
+                                </div>
+
+                                <p>Achieve maximum productivity with minimum effort with Front and create robust Limitless products.</p>
+                            </div> 
+
+                            <div class="grid-container">
+                                <div class="thirteenth-right-img-container">
+                                    <img src="saas-project-assets\icons\images.svg" alt="images">
+                                </div>
+                                <div class="grid-container-header">
+                                    <h2>Images included</h2>
+                                </div>
+                                <p>Images included We made custom license for all our premium images in the front</p>
+                            </div>
+
+                            <div class="grid-container">
+                                <div class="thirteenth-right-img-container">
+                                    <img src="saas-project-assets\icons\cancel.svg" alt="cancel">
+                                </div>
+                                <div class="grid-container-header">
+                                    <h2>Cancel anytyme</h2><button class="sketch-button">sketch</button>
+                                </div>
+                                <p>If its not for you, just cancel, no hidden cots or fees.</p>
+                            </div>
+                            
+                            <div class="grid-container">
+                                <div class="thirteenth-right-img-container">
+                                    <img src="saas-project-assets\icons\moneyback.svg" alt="moneyback">
+                                </div>
+                                <div class="grid-container-header">
+                                    <h2>Money back</h2>
+                                </div>
+
+                                <p>100% guaranteed money back. No questions asked.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
                 <!-- page container -->
             </div>
 
