--- a/saas.html
+++ b/saas.html
@@ -261,8 +261,9 @@
                             </div>
                         </div>
                     </div>
+                <!--////////////////////////////////////  -->
 
-                    <div class="thirteenth-right">
+                <div class="thirteenth-right">
                         <div class="thirteenth-section-grid"> 
 
                             <div class="grid-container">
@@ -309,6 +310,70 @@
                         </div>
                     </div>
 
+                </div>
+                <!--////////////////////////////////////  -->
+                <div class="fourteenth-section">
+                    <div class="fourteenth-section-left">
+                        <div class="hire-us">
+                            <h3>Hire Us</h3>
+                            <p>Whatever your goal we will get you there</p>
+                        </div>
+                        <p class="quote">“ I love front! I love the ease of use, I love the fact that I have total creative freedom...” </p>
+                        <div class="internal-contact">
+                            <h2>Charlotte Moore</h2>
+                            <p>Head of Commercials, Slack</p>
+                        </div>
+                        <div class="fourteenth-image-container">
+                            <div class="fourteenth-image-card">
+                                <img src="saas-project-assets\people\woman_two.jpg" alt="woman_two">
+                            </div>
+                            <div class="fourteenth-image-card">
+                                <img src="saas-project-assets\people\woman_one.jpg" alt="woman_one">
+                            </div>
+                            <div class="fourteenth-image-card fic3">
+                                <img src="saas-project-assets\people\man_one.jpg" alt="man_one">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="fourteenth-section-right">
+                        <form class="contact-form">
+                            <p>Fill out the form and we'll be in touch as soon as possible</p>
+                            <div>
+                                <input type="text" name="firstName" id="firstName" placeholder="First name">
+                                <input type="text" name="lastName" id="lastName" placeholder="Last name">
+                            </div>
+                            <div>
+                                <input type="text" name="firstName2" id="firstName2" placeholder="First name">
+                                <input type="text" name="lastName2" id="lastName2" placeholder="Last name">
+                            </div>
+                            <div>
+                                <select name="budget" id="budget">
+                                    <option value="Budget">Budget</option>
+                                    <option value="0-10,000">$0-$10,000</option>
+                                    <option value="10,000-100,000">$10,000-$100,000</option>
+                                    <option value="100,000-1,000,000">$100,000-$1,000,000</option>
+                                </select>
+                                <select name="country" id="country">
+                                    <option value="country">Country</option>
+                                    <option value="US">USA</option>
+                                </select>
+                            </div>
+                            <textarea name="comments" id="comments" cols="45" rows="5" placeholder="Tell us more about your project, needs, and timeline, please..."></textarea>
+                            <div class="checkbox-section">
+                                <input type="checkbox" name="marketingOk" id="marketingOk">
+                                <label for="marketingOk">Yes, I'd like to receive occasional marketing emails from Front. I have the right to opt out at any time.</label>
+                            </div>
+                            <div class="privacy-policy">
+                                <p>Vew privacy policy</p> 
+                                <p><a href="privacyPolicy">Vew privacy policy</a></p>
+                            </div>
+                            <button class="playButton">
+                                Get Started
+                            </button>
+                        </form>
+
+                    </div>
                 </div>
                 <!-- page container -->
             </div>
