Add fifteenth section

--- a/saas.html
+++ b/saas.html
@@ -375,6 +375,65 @@
 
                     </div>
                 </div>
+                                <!--////////////////////////////////////  -->
+                <div class="fifteenth-section">
+                    <div class="fifteenth-flex">
+                        <div class="fifteenth-flex-card">
+                            <div class="contact-logo">
+                                <img src="saas-project-assets\project_logo\logo.svg" alt="logo">
+                            </div>
+                            <div class="address">
+                                <i class="fa-solid fa-location-arrow"></i>
+                                <p>153 Williamson Plaza, Maggieberg</p>
+                            </div>
+                            <div class="phone">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>+1 (062) 109-9222</p>
+                            </div>
+                        </div>
+
+                        <div class="fifteenth-flex-card">
+                            <h2>Company</h2>
+                            <p> <a href="">About</a> </p>
+                            <div class="hiring">
+                                <p> <a href="">Career</a></p>
+                                <button>We're hiring</button>
+                            </div>
+                            <p> <a href="">Blog</a></p>
+                            <p> <a href="">Customers</a></p>
+                            <p> <a href="">Hire us</a></p>
+                        </div>
+                        <div class="fifteenth-flex-card">
+                            <h2>Features</h2>
+                            <p><a href="">Press</a></p>
+                            <p><a href=""></a></p>
+                            <p><a href="">Release Notes</a></p>
+                            <p><a href="">Intrgrations</a></p>
+                            <p><a href="">Pricing</a></p>
+                        </div>
+                        <div class="fifteenth-flex-card">
+                            <h2>Documentation</h2>
+                            <p><a href="">Support</a></p>
+                            <p><a href="">Docs</a></p>
+                            <p><a href="">Status</a></p>
+                            <p><a href="">API Reference</a></p>
+                            <p><a href="">Tech Requirements</a></p>
+                        </div>
+                        <div class="fifteenth-flex-card">
+                            <h2>Resources</h2>
+                            <div class="help">
+                                <i class="fa-solid fa-circle-info"></i>
+                                <p><a href="">Help</a></p>
+                            </div>
+                            <div class="yAccount">
+                                <i class="fa-solid fa-circle-user"></i>
+                                <p><a href="">Your Account</a></p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
                 <!-- page container -->
             </div>
 
