Add sixteenth section

--- a/saas.html
+++ b/saas.html
@@ -430,10 +430,49 @@
                                 <p><a href="">Your Account</a></p>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
+                            <!--////////////////////////////////////  -->
+                <div class="section-sixteen-one">
+                    <div class="terms-socials-left">
+                        <p><a href="">Privacy & Policy</a></p>
+                        <p>></p>
+                        <p><a href="">Terms</a></p>
+                        <p>></p>
+                        <p><a href="">Site Map</a></p>
+                    </div>
+                    <div class="terms-socials-right">
+                        <div class="terms-socials-icon-container">
+                            <img src="saas-project-assets\Socials Icons\facebook.png" alt="facebook">
+                        </div>
+                        <div class="terms-socials-icon-container">
+                            <img src="saas-project-assets\Socials Icons\google.png" alt="google">
+                        </div>
+                        <div class="terms-socials-icon-container">
+                            <img src="saas-project-assets\Socials Icons\twitter.png" alt="twitter">
+                        </div>
+                        <div class="terms-socials-icon-container">
+                            <img src="saas-project-assets\Socials Icons\git.png" alt="git">
+                        </div>
+                        
+                        <div class="country">
+                            <select name="country" id="country">
+                                <option value="US">
+                                    <p>United States</p>
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                  
+                </div>
+
+                <div class="section-sixteen-two">
+                    <div class="copywtight">
+                        <p>© Front. 2022 Responsive designs. All rights reserved.</p>
+                        <p>When you visit or interact with our sites, services or tools, we or our authorised service providers may use cookies for storing information to help provide you with a better, faster and safer experience and for marketing purposes.</p>
+                    </div>
+                </div>
+
                 <!-- page container -->
             </div>
 
