Add formatting to mobile view

--- a/saas.html
+++ b/saas.html
@@ -5,11 +5,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>SaasWebsite</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="saasCommon.css">
         <link rel="stylesheet" href="sections.css">
-        <link rel="stylesheet" href="2000px.css">
+        <link rel="stylesheet" href="1300px.css">
         <link rel="stylesheet" href="1023px.css">
         <link rel="stylesheet" href="767px.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -386,7 +387,6 @@
                                 </select>
                             </div>
                             <input class="font1" type="text" name="comments" id="comments">
-                            <!-- <textarea class="font1" name="comments" id="comments" cols="45" rows="5" placeholder="Tell us more about your project, needs, and timeline, please..."></textarea> -->
                             <div class="checkbox-section" id="checkbox-section">
                                 <input type="checkbox" name="marketingOk" id="marketingOk">
                                 <label class="font1" for="marketingOk">Yes, I'd like to receive occasional marketing emails from Front. I have the right to opt out at any time.</label>
@@ -470,17 +470,19 @@
                         <p><a class="font2" href="">Site Map</a></p>
                     </div>
                     <div class="terms-socials-right">
-                        <div class="terms-socials-icon-container">
-                            <img src="saas-project-assets\Socials Icons\facebook.png" alt="facebook">
-                        </div>
-                        <div class="terms-socials-icon-container">
-                            <img src="saas-project-assets\Socials Icons\google.png" alt="google">
-                        </div>
-                        <div class="terms-socials-icon-container">
-                            <img src="saas-project-assets\Socials Icons\twitter.png" alt="twitter">
-                        </div>
-                        <div class="terms-socials-icon-container">
-                            <img src="saas-project-assets\Socials Icons\git.png" alt="git">
+                        <div class="socials">
+                            <div class="terms-socials-icon-container">
+                                <img src="saas-project-assets\Socials Icons\facebook.png" alt="facebook">
+                            </div>
+                            <div class="terms-socials-icon-container">
+                                <img src="saas-project-assets\Socials Icons\google.png" alt="google">
+                            </div>
+                            <div class="terms-socials-icon-container">
+                                <img src="saas-project-assets\Socials Icons\twitter.png" alt="twitter">
+                            </div>
+                            <div class="terms-socials-icon-container">
+                                <img src="saas-project-assets\Socials Icons\git.png" alt="git">
+                            </div>
                         </div>
                         
                         <div class="country">
